@@ -38,7 +38,7 @@
 
     <properties>
         <main.basedir>${project.basedir}</main.basedir>
-        <client.protocol.version>1.7.0-6</client.protocol.version>
+        <client.protocol.version>1.7.0-7</client.protocol.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <jdk.version>1.6</jdk.version>
@@ -1038,6 +1038,7 @@
                              -->
                             <argLine>
                                 ${vmHeapSettings}
+                                --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                                 --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
                                 --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                                 --add-opens java.base/java.lang=ALL-UNNAMED
